<resources>
    <string name="app_name">Andrzej Szwalbe</string>

    <string name="large_text_CV1">
        <i>
            <b>Andrzej Jan Szwalbe</b>
        </i>
        (ur. 30 czerwca 1923, zm. 11 listopada 2002) – prawnik, polski działacz społeczny i kulturalny, organizator
        życia muzycznego w Bydgoszczy, od 1993 r. Honorowy Obywatel Bydgoszczy. Był pomysłodawcą i kreatorem licznych
        przedsięwzięć artystycznych o zasięgu pozaregionalnym. Za zasługi dla kultury polskiej został odznaczony
        najwyższymi państwowymi orderami.\n"
        "Urodził się 30 czerwca 1923r. w Warszawie. Jego matką była Eufemia z Sobierajów, a ojciec - Sylwester Jan –
        pracował jako urzędnik skarbowy. Uczył się w Warszawie w Gimnazjum Mikołaja Reja i Gimnazjum Adama Mickiewicza
        oraz uczęszczał do Konserwatorium Warszawskiego. Był uczniem klasy fortepianu prof. Pawła Lewickiego. Poznał
        wtedy późniejsze sławy polskiej muzyki, m.in. Witolda Lutosławskiego. Jeszcze podczas okupacji ukończył I rok
        studiów prawniczych na Uniwersytecie Warszawskim, pracując zarobkowo jako goniec. W 1944r. został osadzony
        przez Niemców w obozie w Pruszkowie, skąd uciekł udając się do Krakowa."
        "Po wojnie przez pewien czas mieszkał w Ciechocinku i stamtąd przywędrował do Bydgoszczy. W 1948 r. ukończył
        studia prawnicze na toruńskim Uniwersytecie Mikołaja Kopernika i przez trzy lata pracował na uniwersytecie jako
        asystent, wykładowca, a potem kierownik działu kadr. Nie poświęcił się jednak karierze prawnika, skłaniając się
        ku działalności kulturalnej. W 1949r. dał się poznać publicznie, wygłaszając spontaniczne przemówienie podczas
        koncertu Pomorskiej Orkiestry Symfonicznej w budynku przy ul. Grodzkiej w Bydgoszczy. Zebrał kilka tysięcy
        podpisów pod petycją żądającą zapewnienia utrzymania Orkiestrze i udał się z nią do władz administracyjnych.
        Incydent ten sprawił, że stał się postacią rozpoznawalną.
    </string>
    <string name="large_text_CV2">
        \nW 1951r. został mianowany dyrektorem administracyjnym Pomorskiej Orkiestry Symfonicznej. Już rok później jego
        zabiegi dotyczące upaństwowienia instytucji zostały uwieńczone powodzeniem. W 1953r. powstała Państwowa
        Filharmonia Pomorska, a Szwalbe stanął na czele Społecznego Komitetu Budowy Filharmonii. Już trzy lata później –
        16 listopada 1956r. Polskie Radio transmitowało inauguracyjny koncert z nowo wybudowanego w Bydgoszczy gmachu
        Filharmonii Pomorskiej, nawiązującego swą architekturą do Filharmonii Narodowej w Warszawie."
        "W kolejnych latach przeprowadzał z pasją kolejne przedsięwzięcia: stał się jednym z inicjatorów powstania
        Bydgoskiego Towarzystwa Naukowego (1959), był pomysłodawcą zbudowania w Bydgoszczy Teatru Muzycznego (1960), a
        gdy w 1973r. ruszyła budowa gmachu Opery, był przez wiele lat inwestorem bezpośrednim tego przedsięwzięcia. W
        1961r. uruchomił przy Filharmonii Pomorskiej serię wydawniczą „Z dziejów muzyki polskiej na Pomorzu”."
        "Zainicjował założenie w Bydgoszczy Stacji Naukowo-Badawczej Instytutu Muzykologii Uniwersytetu Warszawskiego i
        we współpracy z tą instytucją oraz Bydgoskim Towarzystwem Naukowym prowadził szeroko zakrojoną działalność
        naukową.
        W 1962 r. przy pomocy sprowadzonego z Krakowa Stanisława Gałońskiego założył „Capellę Bydgostiensis pro Musica
        Antiqua” - jedną z czołowych polskich orkiestr kameralnych specjalizujących się w muzyce dawnej. W 1963r.
        zainaugurował Festiwale Muzyki Polskiej, przekształcone kilka lat później w Bydgoskie Festiwale Muzyczne, a w
        1966r. - międzynarodowe festiwale i kongresy muzykologiczne Musica Antiqua Europae Orientalis, które stały się
        imprezą rozpoznawalną w Europie i przyczyniły się do wzrostu znajomości i popularności muzyki krajów Europy
        Środkowo-Wschodniej na świecie. Dorobkiem kongresów naukowych towarzyszących MAEO było kilkanaście ksiąg „Acta
        Scientifica” oraz seria wydawnicza „Monumenta MAEO”, promujące w świecie polską muzykę i kulturę."
        "W końcu lat 60. przyczynił się do budowy i otwarcia nowego gmachu Biura Wystaw Artystycznych (1970). Odegrał
        decydującą rolę w uruchomieniu w 1974r. filii łódzkiej Państwowej Wyższej Szkoły Muzycznej, która po kilku
        latach przekształciła się w samodzielną Akademię Muzyczną im. Feliksa Nowowiejskiego w Bydgoszczy. Dla potrzeb
        tej placówki pozyskał w 1975r. zabytkowy budynek dawnego starostwa powiatowego, położony w założonej przez
        siebie dzielnicy muzycznej w Bydgoszczy."
    </string>
    <string name="large_text_CV3">
        \nPrzez cały czas dbał o wysoki poziom artystyczny zespołów Filharmonii Pomorskiej. Zamawiał u wybitnych
        polskich kompozytorów specjalnie pisane dzieła. Dzięki temu powstała m.in. grana na całym świecie „Siwa mgła”
        (na baryton i orkiestrę) Wojciecha Kilara. Zgodnie ze swoim zamysłem dążył, aby filharmonia była centrum
        kultury, łączącym muzykę z różnymi dyscyplinami sztuk. W tym celu w ciągu wielu lat stworzył galerię
        rzeźbiarskich portretów twórców muzyki, kolekcję gobelinów oraz zgromadził unikalną kolekcję XVIII i
        XIX-wiecznych fortepianów, upiększających wnętrza Filharmonii. Urzeczywistniał też swoją wizję Bydgoskiej
        Dzielnicy Muzycznej, umiejętnie zagospodarowując przestrzeń wokół Filharmonii i sąsiadujących z nią placówek
        kulturalnych i dydaktycznych. Jego dziełem była galeria pomników kompozytorów i wirtuozów w Bydgoszczy
        wkomponowana w parku im. Jana Kochanowskiego.
    </string>
    <string name="large_text_CV4">
        Na początku lat 80. wystąpił z ideą przywrócenia blasku i funkcji kulturotwórczych pałacom w Ostromecku i
        Lubostroniu. W tym pierwszym usytuował galerię współczesnego polskiego malarstwa i grafiki im. T. Brzozowskiego.
        Marzył o tym, by Zespół pałacowo-parkowy w Ostromecku pełnił funkcję „bydgoskiego Wilanowa”. Równanie do
        Warszawy, Europy i świata, było nadrzędnym impulsem i celem jego wszelkich działań. Z konsekwencją,
        dalekowzrocznością i optymizmem rozbudowywał życie kulturalne Bydgoszczy. Był z miastem głęboko emocjonalnie
        związany."
        "Po przejściu w 1991r. na emeryturę i po przekazaniu dyrektorskiego fotela Filharmonii Eleonorze Harendarskiej
        - nadal żywo interesował się życiem kulturalnym, zabierając głos w wielu sprawach, zarówno w wymiarze lokalnym,
        jak i ogólnopaństwowym. Przyznano mu tytuł Honorowego Dyrektora Filharmonii Pomorskiej, a w 1993r. godność
        Honorowego Obywatela Bydgoszczy."
        "Był człowiekiem skromnym i bardzo pracowitym, miłośnikiem sztuki i muzyki. Swoje wizje i marzenia potrafił
        skutecznie realizować w trudnych czasach Polski Ludowej, jednocześnie usuwając swoje zasługi w cień, nie dbając
        o osobiste korzyści. Był wybitnym kreatorem kultury w Bydgoszczy, ale także osobą zasłużoną dla kultury
        polskiej, cenioną przez wielu ludzi kultury. Podkreślano jego wizjonerstwo, konsekwencję w działaniu,
        umiejętności mediacyjne, a także wielką erudycję i jeszcze większą skromność. Przez zaprzyjaźnionych z nim
        wybitnych kompozytorów polskich (Wojciech Kilar, Henryk Mikołaj Górecki, Krzysztof Penderecki) był postrzegany
        jako wizytówka bydgoskiej kultury.\n"
        "Zmarł nagle 11 listopada 2002r. w Bydgoszczy, miesiąc po śmierci żony Dobrosławy. Został pochowany na
        cmentarzu katolickim Najświętszego Serca Jezusa w Bydgoszczy przy ul. Ludwikowo 2."
    </string>

    <string name="large_text_HOB">
        "18 marca 1993r. Rada Miasta przyznała mu godność <i>Honorowego Obywatela Bydgoszczy</i>. Był to pierwszy tytuł
        Honorowego Obywatela przyznany od 1945r."
    </string>

    <string name="large_text_Odz1">
        "- Krzyż Wielki Orderu Odrodzenia Polski (pośmiertnie postanowieniem prezydenta Aleksandra Kwaśniewskiego z 15 listopada 2002, za wybitne zasługi dla kultury narodowej).\n"
    </string>
    <string name="large_text_Odz2">
        "- Krzyż Komandorski z Gwiazdą Orderu Odrodzenia Polski (1996, za wybitne zasługi dla kultury polskiej).\n"
    </string>
    <string name="large_text_Odz3">
        "- Złoty Krzyż Zasługi (1955, w 10. rocznicę Polski Ludowej za zasługi w dziedzinie kultury i sztuki)"
    </string>


    <string name="large_text_Upa1">
        \nAndrzej Szwalbe jeszcze za życia doczekał się dwóch książek o sobie (A. Bezwiński - „Andrzej Szwalbe – portret
        niedokończony” i K. Starczak-Kozłowska- „Życie na przełomie, opowieści o Andrzeju Szwalbe”) oraz popiersia w
        brązie dłuta Michała Kubiaka.
    </string>

    <string name="large_text_Upa2">
        30 czerwca 2003r. odsłonięto na kamienicy, w której mieszkał przy ul. Dworcowej 75 – tablicę pamięci. Od 2007
        roku jest patronem Gimnazjum nr 2 w Bydgoszczy (aktualnie Zespołu Szkół nr 28 w Bydgoszczy). 19 kwietnia 2007r.
        ustawiono przed gmachem Filharmonii Pomorskiej przedstawiający jego postać pomnik z brązu autorstwa art. rzeźb.
        Michała Kubiaka.
    </string>

    <string name="large_text_Upa3">
        Na jego cześć nazwano także ulicę w Śródmieściu Bydgoszczy, tuż przy Filharmonii i Zespole Szkół Muzycznych.
    </string>

    <string name="large_text_Upa4">
        W siedemnastą rocznicę śmierci kompozytor bydgoski Sławomir Ciecierski skomponował muzykę na orkiestrę
        symfoniczną zainspirowaną postacią Andrzeja Szwalbego\n
    </string>

    <string name="action_settings_cv">Życiorys</string>
    <string name="action_settings_hob">Honorowy Obywatel Bydgoszczy</string>
    <string name="action_settings_odz">Odznaczenia</string>
    <string name="action_settings_upa">Upamiętnienie</string>
    <string name="action_settings_wv">Muzyka</string>
    <string name="starczak_kozlowska">starczak_kozlowska</string>
    <string name="cytat">cytat</string>
    <string name="budowa_filharmonii">budowa filharmonii</string>
    <string name="szwalbe_i_penderecki">Szwalbe i Penderecki</string>
    <string name="pomnik">pomnik</string>
    <string name="szwalbe">szwalbe</string>
    <string name="szwalbe2">szwalbe2</string>
    <string name="polonia_restituta_komandorski">polonia_restituta_komandorski</string>
    <string name="zkz_baretka">zkz_baretka</string>
    <string name="szwalbe_ksiazka">szwalbe_ksiazka</string>
    <string name="szwalbe_tablica">szwalbe_tablica</string>
    <string name="ul_szwalbego">ul_szwalbego</string>
    <string name="soundcloud_szwalbe">soundcloud_szwalbe</string>
    <string name="polonia_restituta_wielki">polonia_restituta_wielki</string>
</resources>
