<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivityCV"
    tools:showIn="@layout/activity_scrolling_cv">

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_font_dimension"
        android:text="@string/action_settings_cv"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cytat1"
        android:contentDescription="@string/cytat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large_text_CV1" />

        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/budowa_filharmonii"
        android:contentDescription="@string/budowa_filharmonii" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/large_text_CV2"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_gravity="center|top"
        android:src="@drawable/szwalbe_penderecki"
        android:contentDescription="@string/szwalbe_i_penderecki" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/large_text_CV3"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/text_margin"
        android:src="@drawable/szwalbepomnik"
        android:contentDescription="@string/pomnik" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/large_text_CV4"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/text_margin"
        android:src="@drawable/szwalbe"
        android:contentDescription="@string/szwalbe" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>